k8s/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations: 
    kubernetes.io/ingress.class: nginx #Telling kubernetis to create an ingress cotroller based on the nginx project
    nginx.ingress.kubernetes.io/rewrite-target: /$1 #specify how our nginx copy will be implemented. 
spec:
  rules:
    - http: # through http
        paths: #possible paths.
          - path: /?(.*)
            backend: 
              serviceName: client-cluster-ip-service
              servicePort: 3000
          - path: /api/?(.*)
            backend:
              serviceName: server-cluster-ip-service
              servicePort: 5000
